manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deployment
  template: 
    metadata:
      labels:
        app: backend-deployment
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - database-deployment
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: backend-deployment
        image: achoistic98/blog_backend:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: backend-volume
            mountPath: /assets
      volumes:
        - name: backend-volume        
          hostPath:
            path: /volumes
