manifests/database.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-ha
spec:
  serviceName: mysql-ha
  replicas: 3
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
          - name: local-vol
            mountPath: /etc/mysql/conf.d/
          - name: local-vol
            mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: database-volume
          hostPath:
            path: /volumes
  volumeClaimTemplates:
  - metadata:
      name: local-vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-storage"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-ha-0
spec:
  selector:
    statefulset.kubernetes.io/pod-name: mysql-ha-0
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-ha-1
spec:
  selector:
    statefulset.kubernetes.io/pod-name: mysql-ha-1
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-ha-2
spec:
  selector:
    statefulset.kubernetes.io/pod-name: mysql-ha-2
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
---
# CREATE USER 'replicas'@'%' IDENTIFIED BY 'password';
# GRANT REPLICATION SLAVE ON *.* TO 'replicas'@'%';
# FLUSH PRIVILEGES;
# show master status;

# # //flush hosts;
# # // file, position 값 복사


# STOP REPLICA IO_THREAD FOR CHANNEL '';
# CHANGE MASTER TO MASTER_HOST='172.20.28.53', MASTER_PORT=3306, MASTER_USER='replicas', MASTER_PASSWORD='password', MASTER_LOG_FILE='mysql-log.000003', MASTER_LOG_POS=2183799, GET_MASTER_PUBLIC_KEY=1;
# start slave;

# # mysql -u slave -ppassword
# //show slave status\G;
# //show processlist\G;
