manifests/elk.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: devops-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.11.3
        imagePullPolicy: Always
        ports:
        - containerPort: 5601
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: devops-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:8.11.3
        imagePullPolicy: Always
        ports:
        - containerPort: 9200
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: frontend
# spec:
#   selector:
#     app: frontend
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000
#   type: ClusterIP
---
# for dev, kind cluster
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30000
  type: NodePort
