manifests/jenkins.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops-system
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: jenkins
  template: 
    metadata:
      labels:
        app.kubernetes.io/name: jenkins
      name: jenkins
      namespace: devops-system
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app.kubernetes.io/name"
                operator: In
                values:
                - jenkins
            topologyKey: "kubernetes.io/hostname"
      serviceAccountName: jenkins
      securityContext: # .spec level securityContext
        fsGroup: 1000
      containers:
      - name: jenkins-master
        image: achoistic98/techlog-jenkins
        ports:
        - containerPort: 8080
        - containerPort: 50000
        securityContext: # .spec.containers level securityContext
          runAsUser: 1000
          runAsGroup: 1000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          # limits:
          #   memory: "1024Mi"
          #   cpu: "2000m"
        volumeMounts:
          - name: jenkins
            mountPath: /var/jenkins_home
      volumes:
        - name: jenkins
          persistentVolumeClaim:
            claimName: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops-system
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: "external"
  #   service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
  #   service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app.kubernetes.io/name: jenkins
  ports:
    - name: ui
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: controller
      protocol: TCP
      port: 50000
      targetPort: 50000
  type: ClusterIP
  # type: Loadbalancer
---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: argocd
#   namespace: argocd
# spec:
#   resources:
#     requests:
#       storage: 8Gi
#   accessModes:
#     - ReadWriteMany
#   storageClassName: efs-sc
