manifests/oauth2-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template: 
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
        ports:
        - containerPort: 4180
        args:
        # https://www.choigonyok.com/oauth2/start?rd=https%3A%2F%2Fwww.choigonyok.com%2Foauth2%2Fcallback

        - --provider=google
        - --email-domain=""
        - --upstream=http://frontend.default.svc.cluster.local/
        - --http-address=0.0.0.0:4180
        - --cookie-secure=false
        - --authenticated-emails-file=/etc/auth/email.txt
        - --redirect-url=https://www.choigonyok.com/oauth2/callback
        # - --proxy-prefix=/oauth2
        # - --redeem-url=https://accounts.google.com/o/oauth2/token
        volumeMounts:
        - name: authenticated-files
          mountPath: /etc/auth
      volumes:
        - name: authenticated-files
          hostPath:
            path: /etc/auth
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
spec:
  selector:
    app: oauth2-proxy
  ports:
    - protocol: TCP
      port: 4180
      targetPort: 4180
  type: ClusterIP
